k8s/clusters/cluster-2/manifests/rook-ceph/cluster/ceph-bucket-backups-and-users.yaml
#################################################################################################################
# Create an object store user for access to the s3 endpoint.
#################################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: rook-ceph-rgw-backups-service
  namespace: rook-ceph
  labels:
    app: rook-ceph-rgw
    rook_cluster: rook-ceph
    rook_object_store: ceph-objectstore
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "backups.s3.${CLUSTER_NAME}.${INGRESS_DOMAIN}"
    io.cilium/lb-ipam-ips: ${LB_INGRESS_BACKUPS_BUCKET}
spec:
  ports:
  - name: rgw
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: rook-ceph-rgw
    rook_cluster: rook-ceph
    rook_object_store: ceph-objectstore
  sessionAffinity: None
  type: LoadBalancer
