k8s/clusters/cluster-2/manifests/rook-ceph/cluster/service-exports.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rook-ceph-mon-external
  namespace: rook-ceph
  annotations:
    external-dns.alpha.kubernetes.io/hostname:  mon.ceph.${INGRESS_DOMAIN}
spec:
  clusterIP: None
  setIdentifier: "test"
  selector:
    app.kubernetes.io/name: ceph-mon
  ports:
    - protocol: TCP
      port: 6789
      targetPort: 6789
      name: ceph-mon
---
apiVersion: v1
kind: Service
metadata:
  name: rook-ceph-mgr-external
  namespace: rook-ceph
  annotations:
    external-dns.alpha.kubernetes.io/hostname:  mgr.ceph.${INGRESS_DOMAIN}
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: ceph-mgr
  ports:
    - protocol: TCP
      port: 9283
      targetPort: 9283
      name: ceph-mgr
